--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,10 @@
     animation: App-logo-spin infinite 20s linear;
   }
 }
+body {
+  margin: 0;
+  padding-top: 80px; 
+}
 
 .App-header {
   background-color: #282c34;
